<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie_details.MovieDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srlRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:layout_marginHorizontal="@dimen/size_12dp"
                    android:gravity="start"
                    android:text="@string/movie_title"
                    android:textColor="@color/graphite_01"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_18sp"/>

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="@dimen/size_136dp"
                    android:layout_height="@dimen/size_160dp"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:contentDescription="@string/movie_title" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/ivPoster"
                    app:layout_constraintStart_toEndOf="@id/ivPoster"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:layout_marginHorizontal="@dimen/size_8dp"
                    android:gravity="start"
                    android:text="@string/movie_release_date"
                    android:textColor="@color/graphite_01"
                    android:textSize="@dimen/size_16sp"/>

                <TextView
                    android:id="@+id/tvVote"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                    app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
                    app:layout_constraintEnd_toEndOf="@id/tvReleaseDate"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:gravity="start"
                    android:text="@string/movie_vote_average"
                    android:textColor="@color/green_00"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_16sp"/>

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvVote"
                    app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
                    app:layout_constraintEnd_toEndOf="@id/tvReleaseDate"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:gravity="start"
                    android:text="@string/movie_genres"
                    android:textColor="@color/graphite_01"
                    android:textStyle="italic"
                    android:textSize="@dimen/size_16sp"/>

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ivPoster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/size_8dp"
                    android:layout_marginHorizontal="@dimen/size_8dp"
                    android:lineSpacingExtra="@dimen/size_8dp"
                    android:gravity="start"
                    android:text="@string/movie_overview"
                    android:textColor="@color/graphite_01"
                    android:textSize="@dimen/size_16sp"/>

                <View
                    android:id="@+id/vStroke"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="@dimen/size_16dp"
                    app:layout_constraintTop_toBottomOf="@id/tvOverview"
                    app:layout_constraintStart_toStartOf="@id/tvOverview"
                    app:layout_constraintEnd_toEndOf="@id/tvOverview"
                    android:layout_marginTop="@dimen/size_16dp"
                    android:layout_marginHorizontal="@dimen/size_8dp"
                    android:background="@drawable/stroke_graphite"/>

                <ImageView
                    android:id="@+id/ivBackdrop"
                    android:layout_width="@dimen/size_0dp"
                    android:layout_height="@dimen/size_160dp"
                    app:layout_constraintTop_toBottomOf="@id/vStroke"
                    app:layout_constraintStart_toStartOf="@+id/tvOverview"
                    app:layout_constraintEnd_toEndOf="@+id/tvOverview"
                    android:layout_marginVertical="@dimen/size_16dp"
                    android:contentDescription="@string/movie_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>