<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie_list.MovieListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mikyegresl.themoviedatabase.ui.common.view.VerticalSwipeRefresh
        android:id="@+id/srlRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTopRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginHorizontal="@dimen/size_8dp"
                android:text="@string/top_rated"
                android:textColor="@color/graphite_01"
                android:textStyle="bold"
                android:textSize="@dimen/size_20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_movie"
                android:nestedScrollingEnabled="false"
                android:descendantFocusability="blocksDescendants"
                android:focusableInTouchMode="true" />

            <TextView
                android:id="@+id/tvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_32dp"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:text="@string/popular"
                android:textColor="@color/graphite_01"
                android:textStyle="bold"
                android:textSize="@dimen/size_20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/tvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_32dp"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:text="@string/upcoming"
                android:textColor="@color/graphite_01"
                android:textStyle="bold"
                android:textSize="@dimen/size_20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_8dp"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_movie" />

        </LinearLayout>

    </com.mikyegresl.themoviedatabase.ui.common.view.VerticalSwipeRefresh>

</FrameLayout>